# coturn-fstack

./: .gitignore  CMakeLists.txt  arranque_2.sh  burn.sh  cscope.files  ejecutar.sh  generar_grafo.sh  info.txt  output.txt  turnserver.conf
pruebadegrafos/: callgraph.dot  funciones_segun_Chatgpt.txt  function_defs.txt  generacion.sh
src/: CMakeLists.txt
src/Fstack/: CMakeLists.txt  my_fifo.c  my_fifo.h  wrappers.c  wrappers.h
src/apps/: CMakeLists.txt
src/apps/common/: CMakeLists.txt  apputils.c  apputils.h
src/apps/natdiscovery/: CMakeLists.txt  natdiscovery.c
src/apps/peer/: CMakeLists.txt  mainudpserver.c  udpserver.c  udpserver.h
src/apps/relay/: dtls_listener.c  http_server.c  libtelnet.h  mainrelay.c  mainrelay.h  netengine.c  ns_ioalib_engine_impl.c  ns_ioalib_impl.h  prom_server.c  tls_listener.c  turn_admin_server.c  turn_admin_server.h  userdb.c
src/apps/relay/dbdrivers/: dbd_redis.c
src/apps/stunclient/: CMakeLists.txt  stunclient.c
src/apps/uclient/: CMakeLists.txt  session.h  startuclient.c  uclient.c  uclient.h
src/server/: CMakeLists.txt  ns_turn_server.c
